# iot-cloud-commissioning

./: .env.example  .gitignore  AGENTS.md  README.md  docker-compose.yml  pytest.ini  render.yaml
cloud-api/: Dockerfile  alembic.ini  requirements.txt
deploy/: iot-cx-agent-restart.sudoers  iot-cx-agent.service  iot-cx-configure-mstp-router  iot-cx-mstp-router.sudoers  iot-cx-restart-agent
docs/: ERD.md  PRD.md  README.md  SCOPE.md  api-contract.md  architecture-review-2026-07.md  architecture.md  clone-safe-gateway-provisioning.md  cloud-platform-failure-recovery.md  cloud-platform-scaling-assessment.md  cloud-platform-staging-load-test-plan.md  disaster-recovery-runbook.md  edge-program-engine-mvp.md  field-gateway-update.md  fleet-operations-readiness.md  gateway-field-guide.md  gw006-edge-rollback-test-runbook.md  gw032-trend-backlog-incident.md  handoff-2026-07-14-customer2.md  handoff.md  incident-2026-07-13-production-deploy.md  mvp-007-bacnet-read-jobs.md  mvp-008-edge-runtime-smoke.md  mvp-009-hosted-api-gw006-smoke.md  parallel-development-protocol.md  phase2-scaling-completion-report.md  (+14 more)
edge-agent/: config.example.yaml  pyproject.toml  requirements.txt
edge-agent/iot_cx_agent/: bacnet.py  config.py  db.py  heartbeat.py  inventory.py  jobs.py  local_trends.py  local_write.py  main.py  status.py  trends.py  tunnel.py
edge-agent/tests/: test_bacnet.py  test_bacnet_read.py  test_db.py  test_deploy_artifacts.py  test_inventory.py  test_jobs.py  test_local_trends.py  test_local_write.py  test_status.py  test_trends.py  test_tunnel.py  test_version.py
(+106 files in other folders)
