[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "iot-cx-agent"
version = "0.1.4"
description = "Edge heartbeat agent for IOT Cloud Commissioning"
requires-python = ">=3.10"
dependencies = [
    "PyYAML>=6.0.2",
    "requests>=2.32.3",
]

[project.scripts]
iot-cx-agent = "iot_cx_agent.main:main"

[tool.setuptools.packages.find]
include = ["iot_cx_agent*"]
